# GTEST-Starter

./: CMakeLists.txt  main.cpp
